[project]
name = "sh-rpi-daemon"
version = "2.2.5"
description = "shrpid is a power monitor and watchdog daemon for the SH-RPi."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.3",
    "dateparser>=1.1.8",
    "loguru>=0.6.0",
    "pyyaml>=6.0",
    "rich>=13.3.1",
    "smbus2>=0.4.2",
    "typer>=0.7.0",
]
authors = [{ name = "Matti Airas", email = "matti.airas@hatlabs.fi" }]

[project.scripts]
shrpi = "shrpi.__main__:cli"
shrpid = "shrpi.__main__:daemon"

[dependency-groups]
dev = [
    "coverage>=7.0.0",
    "coverage-badge>=1.1.0",
    "mypy>=1.9.0",
    "mypy-extensions>=1.0.0",
    "pydocstyle>=6.1.1",
    "pylint>=2.15.9",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pyupgrade>=3.3.1",
    "ruff>=0.3.2",
    "types-dateparser>=1.2.0.20240420",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.ruff]
line-length = 88
# pyflakes, pycodestyle and isort
lint.select = ["F", "E", "W", "I001"]
target-version = "py38"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
color_output = true
pretty = true
python_version = "3.8"
show_traceback = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]
